# tag_creator

./: .editorconfig  .gitignore  .gitlab-ci.yml  .mypy.ini  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml  on_commit.yml
docker/: Dockerfile
tag_creator/: __main__.py  arguments.py  configuration.py  configuration.yml
tag_creator/repository/: git.py  version.py
tag_creator/utils/: shell.py
tests/: requirements.txt  test_project_ver_updated.py
